# aina-code-data-pipeline

./: .gitignore  README.md  pyproject.toml  setup.sh
aina_preproc/: __init__.py  cli.py  config.py  dedup.py  filters.py  jsonl.py  loaders.py  normalize.py  pack.py  pipeline.py  progress.py  report.py  sft.py  tokenize.py  upload_s3.py
configs/: aina_code_3m_1k_pretrain.yaml  aina_code_3m_1k_sft.yaml  aina_code_500m_8k_pretrain.yaml  aina_code_500m_8k_sft.yaml  aina_code_50m_2k_pretrain.yaml  aina_code_50m_2k_sft.yaml  aina_code_pretrain_3m_local_18m.yaml  aina_code_pretrain_500m_server_10b.yaml  aina_code_pretrain_50m_server_1b.yaml  aina_code_sft_3m_local.yaml  aina_code_sft_500m_server.yaml  aina_code_sft_50m_server.yaml
scripts/: _bootstrap.py  build_dataset.py  dedup.py  download_stream.py  filters.py  normalize_base.py  normalize_instruct.py  pack.py  report.py  tokenize.py  upload_s3.py
tests/: test_filters.py  test_pack.py  test_pipeline_sft.py  test_pipeline_smoke.py  test_upload_s3.py
